LIST OF CHANGES
---------------

release 67.0.0
 - Turn off spatial filter QC check for NovaSeqX
 - Switch to Perlbrew to obtain multiple Perl versions
 - Remove npg_ml_warehouse dependency
 - Enhance README with more context
 - Improve Markdown format consistency
 - Add images of DAGs, add links, fix a typo
 - Add info on data intensive P4 based steps

release 66.0.0
 - small tweak to seq_alignment so GbS samples with no study ref do not fail
 - switch off spatial filter for NovaSeqX
 - for NovaSeqX, default RNA analysis should be STAR
 
release 65.1.0
 - ensure per-product archival for NovaSeqX data
 - runs with data analysed on-board are not deletable
 - ensure per product archival impacts hierarchy
 - per product publish doc and variable name fixup
 - when platform_NovaSeqX is detected, set p4 parameter i2b_nocall_qual_switch
   to "on"
 - avoid archiving "Analysis" hierarchy with XML and InterOp

release 65.0.0
 - remove wr limit of p4s1 to specific flavor

release 64.0.1
 - set p4 parameter to fix bug in bwa-mem2 + non-consented human split

release 64.0.0
 - add bwa_mem2 flag to options.pm to allow override of default bwa analyses at pipeline invocation
 - update seq_alignment to recognise the bwa_mem2 flag and also default to bwa_mem2 for NovaSeqX platform

release 63.3.0
 - force no_target_alignment for haplotag libraries

release 63.2.0
 - Adapt the pipeline to load a syslog dispatcher file for npg_publish_tree

release 63.1.0
 - add configuration and functionality to support filtering and appending
   irods error log messages to syslog.

release 63.0.0
 - removed pp_archiver from the function graph.
 - removed scripts for CLIMB data maintenance
 - add haplotag QC check

release 62.2.0
 - CI
   - update version of github actions
   - change CI runner from Ubuntu 18.04 to ubuntu-latest
 - run deletion:
     accounted for a potential human split for GBS runs and lanes where
       a primer panel is set,