@@ -36,6 +36,7 @@ Readonly::Scalar my $PFC_MARKDUP_OPT_DIST         => q{2500};  # distance in pix
 Readonly::Scalar my $NON_PFC_MARKDUP_OPT_DIST     => q{100};   # distance in pixels for optical duplicate detection on non-patterned flowcells
 Readonly::Scalar my $BWA_MEM_MISMATCH_PENALTY     => q{5};
 Readonly::Scalar my $SKIP_MARKDUP_METRICS         => 1;
+Readonly::Scalar my $AUTO_COV_THRESHOLD           => 1;
 
 around 'markdup_method' => sub {
     my $orig = shift;
@@ -371,16 +372,22 @@ sub _alignment_command { ## no critic (Subroutines::ProhibitExcessComplexity)
 
   # handle extra stats file for aligned data with reference regions file
   my $do_target_regions_stats = 0;
-  if ($do_target_alignment && !$spike_tag && !$human_split && !$do_gbs_plex && !$do_rna) {
+  if ($do_target_alignment && !$spike_tag && !$do_gbs_plex && !$do_rna) {
+    my $target_path = $self->_ref($dp, $TARGET_REGIONS_DIR);
+    my $target_autosome_path = $self->_ref($dp, $TARGET_AUTOSOME_REGIONS_DIR);
+
     if($self->_do_bait_stats_analysis($dp)){
        $p4_param_vals->{target_regions_file} = $self->_bait($rpt_list)->target_intervals_path();
-       push @{$p4_ops->{prune}}, 'foptgt.*samtools_stats_F0.*_target_autosome.*-';
        $do_target_regions_stats = 1;
+       if ( $l->library_type && ($l->library_type =~ /BGE/smx) && $target_autosome_path ) {
+         $p4_param_vals->{target_autosome_regions_file} = $target_autosome_path.q(.interval_list);
+         $p4_param_vals->{stats_filter__cov_threshold_autosome} = $AUTO_COV_THRESHOLD;
+       } else {
+         push @{$p4_ops->{prune}}, 'foptgt.*samtools_stats_F0.*_target_autosome.*-';
+       }
     }
     else {
-      my $target_path = $self->_ref($dp, $TARGET_REGIONS_DIR);
-      my $target_autosome_path = $self->_ref($dp, $TARGET_AUTOSOME_REGIONS_DIR);
-      if ($target_path) {
+      if ($target_path && !$human_split) {
         $p4_param_vals->{target_regions_file} = $target_path.q(.interval_list);
         $do_target_regions_stats = 1;
         if ($target_autosome_path) {
